# Game_engines_LR4

./: .clang-format  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Configs/: assets.txt  config.txt  enemyPatrol.txt  level.txt
src/Ecs/: CMakeLists.txt
src/Ecs/Components/: BaseComponentStorage.h  ComponentStorage.hpp
src/Ecs/Entity/: EntityId.cpp  EntityId.h
src/Ecs/Filter/: Filter.cpp  Filter.h  FilterBuilder.cpp  FilterBuilder.h
src/Ecs/Systems/: IInitializer.h  ISystem.h  SystemsManager.cpp  SystemsManager.h
src/Ecs/World/: IWorldInternal.h  World.cpp  World.h
src/GameEngine/: GameEngine.cpp  GameEngine.h  GameEngineConfiguration.h  Scene.cpp  Scene.h
src/GameEngine/Assets/: Animation.h  AssetManager.cpp  AssetManager.h
src/GameEngine/ColliderDebug/: ColliderDebug.cpp  ColliderDebug.h
src/GameEngine/Editor/: CameraService.cpp  CameraService.h  GameObjectController.cpp  GameObjectController.h  GameObjectFactory.cpp  GameObjectFactory.h
src/GameEngine/Editor/Components/: BBoxComponent.h  EditorComponent.h  TransformComponent.h
src/GameEngine/Editor/Systems/: GuiSystem.cpp  GuiSystem.h  MouseInputSystem.cpp  MouseInputSystem.h  RenderSystem.cpp  RenderSystem.h
src/GameEngine/Grid/: Grid.cpp  Grid.h
src/GameEngine/Input/: InputAction.cpp  InputAction.h  InputManager.cpp  InputManager.h
src/GameEngine/Scenes/: EditorScene.cpp  EditorScene.h  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h
src/Sample/Components/: AnimationComponent.h  AsteroidComponent.h  BoxColliderComponent.h  BulletComponent.h  CameraComponent.h  CircleColliderComponent.h  CollisionComponent.h  DefaultCameraTag.h  EnemyComponent.h  ExplosionTag.h  FinishTag.h  FollowXCameraTag.h  GravityComponent.h  JumpComponent.h  MoveInputEvent.h  MovementComponent.h  ObjectComponent.h  PositionComponent.h  ShootEvent.h  ShooterComponent.h  SpriteComponent.h
src/Sample/Systems/: AnimationSystem.cpp  AnimationSystem.h  BoundariesSystem.cpp  BoundariesSystem.h  CleanerSystem.cpp  CleanerSystem.h  CollisionResolveSystem.cpp  CollisionResolveSystem.h  CollisionSystem.cpp  CollisionSystem.h  DefaultCameraSystem.cpp  DefaultCameraSystem.h  EnemyAISystem.cpp  EnemyAISystem.h  EntityFactory.cpp  EntityFactory.h  FollowXCameraSystem.cpp  FollowXCameraSystem.h  InitSystem.cpp  InitSystem.h  InputSystem.cpp  InputSystem.h  MovementSystem.cpp  MovementSystem.h  PlayerAnimationSystem.cpp  PlayerAnimationSystem.h  PlayerRespawnSystem.cpp  PlayerRespawnSystem.h  RenderSystem.cpp  RenderSystem.h  ShootingSystem.cpp  ShootingSystem.h
src/UI/: Button.cpp  Button.h  Drawable.h  Text.cpp  Text.h
